Dara: Use imagesLoaded to refresh slideshow after it loads, as an alternative fix for the Firefox overlap issue. See #169.

--- a/dara/style.css
+++ b/dara/style.css
@@ -1468,7 +1468,6 @@ blockquote p:last-child {
 	position: relative;
 }
 .hero-content {
-	padding-bottom: 50.8474576271186%; /* Makes sure slideshow maintains aspect ratio while loading to avoid overlap */
 	position: relative;
 	overflow: hidden;
 }
